Added WEL Conversion figures to YTD Sales/Revenu

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 <a href="http://www.wiley.com/college/dddash/sales/wel.pdf">WEL</a>        
   <div id="line2"></div>
   <div class="revenue">
-    <p id="revA">10K ?</p>   <!-- Input Revenue for year 2016 -->
+    <p id="revA">1.58%</p>   <!-- Input Revenue for year 2016 -->
 <div id="revborder">Conversions</div>
-    <p id="revB"> 9K ?</p>   <!-- Input Revenue for year 2017 -->
+    <p id="revB">1.55%</p>   <!-- Input Revenue for year 2017 -->
     </div>
 </div>
 <div class="lines">
