--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function initChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},200000,400000,600000,800000],     /* Y-axis range */          
+          ticks: [{v:0, f:''},{v:200000, f:'200K'},{v:400000, f:'400K'},{v:600000, f:'600K'},{v:800000, f:'800K'}],     /* Y-axis range */          
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -119,7 +119,7 @@ function initChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''}, 2000000,4000000,6000000,8000000],      /* Y-axis range */            
+          ticks: [{v:0, f:''}, {v:2000000, f:'2M'},{v:4000000, f:'4M'},{v:6000000, f:'6M'},{v:8000000, f:'8M'}],      /* Y-axis range */            
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -155,7 +155,7 @@ function initChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],     /* Y-axis range */          
+          ticks: [{v:0, f:''},{v:5000000, f:'5M'},{v:10000000, f:'10M'},{v:15000000, f:'15M'},{v:20000000, f:'20M'}],     /* Y-axis range */          
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -191,7 +191,7 @@ function initChart() {
           baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},5000000,10000000,15000000,20000000, {v:500, f:''}],     /* Y-axis range */        
+          ticks: [{v:0, f:''},{v:5000000, f:'5M'},{v:10000000, f:'10M'},{v:15000000, f:'15M'},{v:20000000, f:'20M'}],     /* Y-axis range */        
           title: '',
           gridlines: {color: 'none'},
           baselineColor: '#3399CC'
@@ -200,6 +200,45 @@ function initChart() {
       };
       var line4 = new google.visualization.LineChart(document.getElementById('line4'));
       line4.draw(data10, options10);
+	  
+	  
+	  //Reliability and Usage
+		  function selectMetric(e) {
+	  e.preventDefault();
+	  var metric = $(e.currentTarget).attr('data-metric');
+	  var metricSelector = '[data-metric="' + metric + '"]';
+
+	  // set selected link
+	  $('.side .selected').removeClass('selected');
+	  $('.side .links a' + metricSelector).addClass('selected');
+
+	  // show proper stats
+	  $('.side .stats ul').hide();
+	  $('.side .stats ul' + metricSelector).show();
+
+	  // activate proper graph
+	  var $wrapper = $('.main article' + metricSelector).parent();
+	  var isActive = $wrapper.hasClass('active');
+	  if (!isActive) {
+		$wrapper
+		  .addClass('active')
+		  .siblings().removeClass('active');
+	  }
+	}
+
+	function checkKey(e) {
+	  if (e.keyCode === 13) {
+		// hit enter
+		selectMetric(e);
+	  }
+	}
+
+	$('.side .links a').on('click', selectMetric);
+	$('.main article').on({
+	  'click': selectMetric,
+	  'keyup': checkKey
+	});
+
 }
 </script>
 </head>
@@ -353,7 +392,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   
   </tbody>
-</table>	<img src="https://s22.postimg.org/fwtfqwq69/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
 </div>
 
@@ -370,7 +409,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   </tr>
   
   </tbody>
-</table>	<img src="https://s22.postimg.org/fwtfqwq69/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+</table>	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
 </div>
 
@@ -380,14 +419,28 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <tbody valign="middle">
 
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="">Global Diagnostic Assessment</a></td>	 		<!--  INPUT NAME OF 'NEW PRODUCT' -->	
+    <td width="38%" style="text-align:left;width:46%;">
+		<a href="#" class="tooltip">
+		Global Diagnostic Assesssment 					                    <!--  INPUT NAME OF 'NEW PRODUCT' -->	
+		<span>
+			<strong>Global Diagnostic Assesssment</strong><br />
+			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</span>
+	</a></td>	
     <td width="25%" style="width:21%;">MVP Launch</td>								<!--  INPUT CURRENT PHASE  -->
     <td>09/30/16</td>												<!--  INPUT PHASE COMPLETION DATE -->
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
   </tr>
   
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="">Wiley Assessment Service</a></td>				<!--  INPUT NAME OF 'NEW PRODUCT' -->	
+    <td width="38%" style="text-align:left;width:46%;">
+		<a href="#" class="tooltip">
+		Wiley Assessment Service					                    <!--  INPUT NAME OF 'NEW PRODUCT' -->	
+		<span>
+			<strong>Wiley Assessment Service</strong><br />
+			is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		</span>
+	</a></td>		
     <td width="25%" style="width:21%;">Pilot</td>								<!--  INPUT CURRENT PHASE  -->
     <td>12/15/17</td> 												<!--  INPUT PHASE COMPLETION DATE -->
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>					<!--  INPUT STATUS green = images/circle_green.png, yellow = images/circle_yellow.png, red = images/circle_red.png -->
@@ -430,7 +483,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
   
   </tbody>
 </table>
-  	<img src="https://s22.postimg.org/fwtfqwq69/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
+  	<img src="https://s10.postimg.org/ogothlkzt/key_3.png"  width="450" height="20" alt="Legend" style="margin-top: 1%; margin-left: 1%; margin-right:1%; margin-bottom:1%; float: right">
 
     </div>
     </div>
@@ -531,53 +584,376 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <li>For WileyPLUS (E4) and WPLS, contact <b>Edward Winkleman,</b> Manager, Digital Delivery Product Operations | (1) 201-748-6821 | <a href="mailto:ewinklem@wiley.com">ewinklem@wiley.com</a></li>
 </ul></div>    
 		
-        <table width="100%">
-<tbody valign="middle">
-  <tr>
-    <td style="text-align:left;">&nbsp;</td>
-    <td>Dummies</td>
-    <td>WEL</td>
-    <td>WileyPlus</td>
-    <td>WPLS</td>
-  </tr>
-  <tr>
-    <td colspan="5" bgcolor="#3399CC" style="text-align:left;color:#FFFFFF; font-weight:bold;">RELIABILITY</td>
-    </tr>
-  <tr>
-    <td style="text-align:left">Uptime</td>
-    <td><font color="gray">99.5%</font></td>						<!--  INPUT 'UPTIME' FOR DUMMIES   -->
-    <td><font color="gray">99.5%</font></td>						<!--  INPUT 'UPTIME' FOR WEL       -->
-    <td>99.17%</td>									<!--  INPUT 'UPTIME' FOR WileyPLUS -->
-    <td>100%</td>									<!--  INPUT 'UPTIME' FOR WPLS      -->
-  </tr>
-  <tr>
-    <td style="text-align:left">Days Since Last Outage</td>
-    <td><font color="gray">128</font></td>						<!--  INPUT 'DAYS SINCE LAST OUTAGE' FOR DUMMIES    -->
-    <td><font color="gray">128</font></td>						<!--  INPUT 'DAYS SINCE LAST OUTAGE' FOR WEL        -->
-    <td>182</td>						   			<!--  INPUT 'DAYS SINCE LAST OUTAGE' FOR WileyPLUS  -->
-    <td>N/A</td>						    			<!--  INPUT 'DAYS SINCE LAST OUTAGE' FOR WPLS       -->
-  </tr>
-  <tr bgcolor="#3399CC">
-    <td colspan="5" style="text-align:left;color:#FFFFFF; font-weight:bold;">UNIQUE VISITORS</td>
-    </tr>
-  <tr>
-    <td style="text-align:left">Past 7 Days</td>
-    <td>2.5M</td>						 			<!--  INPUT 'PAST 7 DAYS' FOR DUMMIES    -->
-    <td>35K* / 18K**</td>						   		<!--  INPUT 'PAST 7 DAYS' FOR WEL        -->
-    <td>361K</td>						   			<!--  INPUT 'PAST 7 DAYS' FOR WileyPLUS  -->
-    <td>34K</td>						   			<!--  INPUT 'PAST 7 DAYS' FOR WPLS       -->
-  </tr>
-  <tr>
-    <td style="text-align:left">Since Start of FY</td>
-    <td>54M</td>						   			<!--  INPUT 'SINCE START OF FY' FOR DUMMIES  -->
-    <td>524K* / 186K**</td>						   		<!--  INPUT 'SINCE START OF FY' FOR WEL  -->
-    <td>2M</td>							   			<!--  INPUT 'SINCE START OF FY' FOR WileyPLUS  -->
-    <td>204K</td>						   			<!--  INPUT 'SINCE START OF FY' FOR WPLS  -->
-  </tr>
-  </tbody>
-</table>
-  <div style="float: left; margin-left: 2%; margin-bottom: 2%">* www.efficientlearning.com</div>
-    <div style="float: left; margin-left: 2%; margin-bottom: 2%">** app.efficientlearning.com</div>
+<div class="containers">
+  <div class="side">
+    <h1></h1>
+    <div class="stats">
+      <ul data-metric="dummies">
+    <h1>Unique Visitors</h1>         
+        <li>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">54M</div>
+        </li>
+        <li>
+          <div class="key">Past 7 days</div>
+          <div class="val">2.5M</div>
+        </li>       
+      </ul>
+      <ul data-metric="WEL">
+    <h1>Unique Visitors</h1>         
+        <li>
+          <div class="key">FY17 YTD</div>
+          <div class="val">524K*/186K**</div>
+        </li>
+        <li>
+          <div class="key">Past 7 days</div>
+          <div class="val">35K*/18K**</div>
+        </li>        
+      </ul>
+      <ul data-metric="WileyPLUS">
+    <h1>Unique Visitors</h1>         
+        <li>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">2M</div>
+        </li>
+        <li>
+          <div class="key">Past 7 days</div>
+          <div class="val">361K</div>
+        </li>  
+      </ul>
+
+      <ul data-metric="WPLS">
+    <h1>Unique Visitors</h1>         
+        <li>
+          <div class="key">FY17 YTD Total</div>
+          <div class="val">204K</div>
+        </li>
+        <li>
+          <div class="key">Past 7 days</div>
+          <div class="val">34K</div>
+        </li>  
+      </ul>      
+    </div>
+
+        <div class="stats">
+      <ul data-metric="dummies">      
+    <h1>Reliability</h1>      
+        <li>
+          <div class="key">Uptime</div>
+          <div class="val">99.5%</div>
+        </li>   
+        <li>
+          <div class="key">Last Outage (days)</div>
+          <div class="val">128</div>
+        </li>  
+        </ul>
+      <ul data-metric="WEL">      
+    <h1>Reliability</h1>      
+        <li>
+          <div class="key">Uptime</div>
+          <div class="val">99.5%</div>
+        </li>   
+        <li>
+          <div class="key">Last Outage (days)</div>
+          <div class="val">128</div>
+        </li> 
+        <br></br>
+        <li>
+          <h5>* www.efficientlearning.com</h5>
+          <h5>** app.efficientlearning.com</h5>
+        </li>         
+        </ul>
+       <ul data-metric="WileyPLUS">      
+    <h1>Reliability</h1>      
+        <li>
+          <div class="key">Uptime</div>
+          <div class="val">99.17%</div>
+        </li>   
+        <li>
+          <div class="key">Last Outage (days)</div>
+          <div class="val">182</div>
+        </li>
+        </ul>
+      <ul data-metric="WPLS">      
+    <h1>Reliability</h1>      
+        <li>
+          <div class="key">Uptime</div>
+          <div class="val">100%</div>
+        </li>   
+        <li>
+          <div class="key">Last Outage (days)</div>
+          <div class="val">N/A</div>
+        </li>           
+      </ul>
+      </div>
+  </div>
+  <div class="main">
+    <ul>
+      <li class="active">
+        <article tabindex="0" data-metric="dummies">
+          <div class="area">
+            <div class="lines">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="data dummies">
+              <dl>
+                <dt>Sep</dt>
+                <dd>36</dd>
+              </dl>
+              <dl>
+                <dt>Oct</dt>
+                <dd>44</dd>
+              </dl>
+              <dl>
+                <dt>Nov</dt>
+                <dd>52</dd>
+              </dl>
+              <dl>
+                <dt>Dec</dt>
+                <dd>32</dd>
+              </dl>
+              <dl>
+                <dt>Jan</dt>
+                <dd>44</dd>
+              </dl>
+              <dl>
+                <dt>Feb</dt>
+                <dd>68</dd>
+              </dl>
+              <dl>
+                <dt>Mar</dt>
+                <dd>80</dd>
+              </dl>
+              <dl>
+                <dt>Apr</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>May</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>June</dt>
+                <dd>46</dd>
+              </dl>
+              <dl>
+                <dt>July</dt>
+                <dd>60</dd>
+              </dl>
+              <dl>
+                <dt>Aug</dt>
+                <dd>64</dd>
+              </dl>              
+            </div>
+          </div>
+          <h1>Unique Visitors: Dummies</h1>
+        </article>
+      </li>
+      <li>
+        <article tabindex="0" data-metric="WEL">
+          <div class="area">
+            <div class="lines">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="data WEL">
+              <dl>
+                <dt>Sep</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>Oct</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>Nov</dt>
+                <dd>64</dd>
+              </dl>
+              <dl>
+                <dt>Dec</dt>
+                <dd>48</dd>
+              </dl>
+              <dl>
+                <dt>Jan</dt>
+                <dd>64</dd>
+              </dl>
+              <dl>
+                <dt>Feb</dt>
+                <dd>80</dd>
+              </dl>
+              <dl>
+                <dt>Mar</dt>
+                <dd>84</dd>
+              </dl>
+               <dl>
+                <dt>Apr</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>May</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>June</dt>
+                <dd>46</dd>
+              </dl>
+              <dl>
+                <dt>July</dt>
+                <dd>60</dd>
+              </dl>
+              <dl>
+                <dt>Aug</dt>
+                <dd>64</dd>
+              </dl>               
+            </div>
+          </div>
+          <h1>Unique Visitors: WEL</h1>
+        </article>
+      </li>
+      <li>
+        <article tabindex="0" data-metric="WileyPLUS">
+          <div class="area">
+            <div class="lines">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="data WileyPLUS">
+              <dl>
+                <dt>Sep</dt>
+                <dd>76</dd>
+              </dl>
+              <dl>
+                <dt>Oct</dt>
+                <dd>88</dd>
+              </dl>
+              <dl>
+                <dt>Nov</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>Dec</dt>
+                <dd>68</dd>
+              </dl>
+              <dl>
+                <dt>Jan</dt>
+                <dd>52</dd>
+              </dl>
+              <dl>
+                <dt>Feb</dt>
+                <dd>60</dd>
+              </dl>
+              <dl>
+                <dt>Mar</dt>
+                <dd>40</dd>
+              </dl>
+              <dl>
+                <dt>Apr</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>May</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>June</dt>
+                <dd>46</dd>
+              </dl>
+              <dl>
+                <dt>July</dt>
+                <dd>60</dd>
+              </dl>
+              <dl>
+                <dt>Aug</dt>
+                <dd>64</dd>
+              </dl>                
+            </div>
+          </div>
+          <h1>Unique Visitors: WileyPLUS</h1>
+        </article>
+      </li>
+      
+      <li>
+        <article tabindex="0" data-metric="WPLS">
+          <div class="area">
+            <div class="lines">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="data WPLS">
+              <dl>
+                <dt>Sep</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>Oct</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>Nov</dt>
+                <dd>64</dd>
+              </dl>
+              <dl>
+                <dt>Dec</dt>
+                <dd>48</dd>
+              </dl>
+              <dl>
+                <dt>Jan</dt>
+                <dd>64</dd>
+              </dl>
+              <dl>
+                <dt>Feb</dt>
+                <dd>80</dd>
+              </dl>
+              <dl>
+                <dt>Mar</dt>
+                <dd>84</dd>
+              </dl>
+              <dl>
+                <dt>Apr</dt>
+                <dd>72</dd>
+              </dl>
+              <dl>
+                <dt>May</dt>
+                <dd>56</dd>
+              </dl>
+              <dl>
+                <dt>June</dt>
+                <dd>46</dd>
+              </dl>
+              <dl>
+                <dt>July</dt>
+                <dd>60</dd>
+              </dl>
+              <dl>
+                <dt>Aug</dt>
+                <dd>64</dd>
+              </dl>               
+            </div>
+          </div>
+          <h1>Unique Visitors: WPLS</h1>
+        </article>
+      </li>      
+    </ul>
+  </div>
+</div>
+		
     </div>
 </div>
     <!-- Placed at the end of the document so the pages load faster -->
@@ -721,3 +1097,4 @@ for (i = 0; i < acc.length; i++) {
     </script>
 </body>
 </html>
+
