--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     
 
     
-<div class="six columns rightcolumn">    
+<div class="twelve columns">    
       <div class="headline"><h1>Reliability &amp; Usage
    	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1>
       </div>
@@ -584,7 +584,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
 <li>For WileyPLUS (E4) and WPLS, contact <b>Edward Winkleman,</b> Manager, Digital Delivery Product Operations | (1) 201-748-6821 | <a href="mailto:ewinklem@wiley.com">ewinklem@wiley.com</a></li>
 </ul></div>    
 		
-<div class="containers">
+<div class="containers" style="background-color: #f2f2f2; width: 100%">
   <div class="side">
     <h1></h1>
     <div class="stats">
@@ -659,8 +659,8 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
         </li> 
         <br></br>
         <li>
-          <h5>* www.efficientlearning.com</h5>
-          <h5>** app.efficientlearning.com</h5>
+          <div><font size="2"><strong>* www.efficientlearning.com</font></strong></div>
+          <div><font size="2"><strong>** app.efficientlearning.com</font></strong></div>
         </li>         
         </ul>
        <ul data-metric="WileyPLUS">      
@@ -738,11 +738,11 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
                 <dd>56</dd>
               </dl>
               <dl>
-                <dt>June</dt>
+                <dt>Jun</dt>
                 <dd>46</dd>
               </dl>
               <dl>
-                <dt>July</dt>
+                <dt>Jul</dt>
                 <dd>60</dd>
               </dl>
               <dl>
@@ -1097,4 +1097,3 @@ for (i = 0; i < acc.length; i++) {
     </script>
 </body>
 </html>
-
